--- a/.gitattributes
+++ b/.gitattributes
@@ -45,4 +45,4 @@
 *.rns filter=lfs diff=lfs merge=lfs -text
 *.reason filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
-ChessAR/Assets/_Prefabs/ChesSet/ChessSet.prefab filter=lfs diff=lfs merge=lfs -text
+ChessSet.prefab filter=lfs diff=lfs merge=lfs -text
